src/test/ui/parser/pat-lt-bracket-7.stderr
error: expected one of `)`, `,`, or `@`, found `[`
  --> $DIR/pat-lt-bracket-7.rs:2:16
   |
LL |     for thing(x[]) in foo {}
   |                ^ expected one of `)`, `,`, or `@` here

error: aborting due to previous error

